--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
       <nav class="nav">
           <h1>logo</h1>
           <div class="nav__links">
-            <a class="nav__links--link" href="#">About Us</a>
+            <a class="nav__links--link nav__links--link-underline" href="#">About Us</a>
             <a class="nav__links--link" href="#">News</a>
             <a class="nav__links--link" href="#">Services</a>
             <a class="nav__links--link" href="#">Clients/Partners</a>
             <a class="nav__links--link" href="#">Contract Vehicles</a>
             <a class="nav__links--link" href="#">Careers</a>
             <a class="nav__links--link" href="#">Locations</a>
-            <i class="fas fa-search nav__links--link"></i> 
+            <i class="fas fa-search"></i> 
             <a class="nav__links--link contact" href="#">Contact Us</a>
           </div>
       </nav>
