--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
       </div>
     </section>
     <section class="our-team">
+      <h2>Meet the team</h2>
       <div class="our-team__container">
         <div class="our-team__container--left">
           <img class="our-team__container--pic"
