finished contact form

--- a/public/index.html
+++ b/public/index.html
@@ -103,18 +103,34 @@
       <p>Sign up below and we'll contact<br>you shortly</p>
       <form class="contact__form">
         <div class="contact__form-row">
-          <div class="contact__form-row--form">
+          <div class="contact__form-row--input">
             <label for="first name">First Name</label>
-            <input type="text">
+            <input type="text" id="first-name">
           </div>
-          <div class="contact__form-row--form">
-            <label for="first name">First Name</label>
-            <input type="text">
+          <div class="contact__form-row--input">
+            <label for="last name">Last Name</label>
+            <input type="text" id="last-name">
           </div>
         </div>
-
-        
-        
+        <div class="contact__form-row">
+          <div class="contact__form-row--input">
+            <label for="email">Email Address</label>
+            <input type="text" id="email">
+          </div>
+          <div class="contact__form-row--input">
+            <label for="interested-in">Interested In</label>
+            <select name="interested-in" id="interested-in" placeholder="Select...">
+              <option value="select">Select...</option>
+              <option value="client">Client</option>
+              <option value="partner">Partner</option>
+              <option value="contract-vehicles">Contract Vehicles</option>
+            </select>
+          </div>
+        </div>
+        <div class="contact__form-row--input">
+          <input class="submit-btn" type="submit" value="Here We Go">
+          <p>By subscribing to emails from NSi, you are agreeing to Nsi's <a>privacy policy.</a></p>
+        </div>
       </form>
     </section>
    
