--- a/public/index.html
+++ b/public/index.html
@@ -98,24 +98,27 @@
     </section>
     <section class="careers">
       <div class="careers__left">
-        <div class="careers__employee-container">
-          <img class="careers__employee" src="./img/IMG_0354.jpeg" alt="employee">
-          <div class="careers__employee-details">
-            <p  class="careers__employee-details--name">Allan Vila</p>
-            <p  class="careers__employee-details--title">Web Developer</p>
-            <p  class="careers__employee-details--location">Located in Sarasota, FL</p>
-            <p  class="careers__employee-details--review">"NSi gave me a chance and changed my family's life!" <i class="fas fa-heart"></i></p>
-            <div class="careers__employee-details--bubbles">
-              <img class="bubbles--green" src="./img/green-bubble.png" alt="">
-              <img class="bubbles--red" src="./img/red-bubble.png" alt="">
+        <div class="careers__employee-relative-container">
+          <div class="careers__employee-container allan">
+            <img class="careers__employee" src="./img/IMG_0354.jpeg" alt="employee">
+            <div class="careers__employee-details">
+              <p  class="careers__employee-details--name">Allan Vila</p>
+              <p  class="careers__employee-details--title">Web Developer</p>
+              <p  class="careers__employee-details--location">Located in Sarasota, FL</p>
+              <p  class="careers__employee-details--review">"NSi gave me a chance and changed my family's life!" <i class="fas fa-heart"></i></p>
+              <div class="careers__employee-details--bubbles">
+                <img class="bubbles--green" src="./img/green-bubble.png" alt="">
+                <img class="bubbles--red" src="./img/red-bubble.png" alt="">
+              </div>
             </div>
-            
           </div>
+
         </div>
       </div>
       <div class="careers__right">
-        <h2>Looking for a change and want to join the team?</h2>
-        <p>Do you want to help our national security? Join a fast-growing high paced team. We have locations in MD, VA, JF, NC, and CA. We also offer remote work!</p>
+        <h2 class="careers__right--header">Looking for a change and <br>want to join the team?</h2>
+        <p class="careers__right--details">Do you want to help our national security? Join a fast-growing high paced team. We have locations in MD, VA, JF, NC, and CA. We also offer remote work!</p>
+        <a class="careers__right--apply-btn"href="#">Apply Now!</a>
       </div>
     </section>
     <section class="contact">
