finished careers section

--- a/public/index.html
+++ b/public/index.html
@@ -99,16 +99,29 @@
     <section class="careers">
       <div class="careers__left">
         <div class="careers__employee-relative-container">
-          <div class="careers__employee-container allan">
-            <img class="careers__employee" src="./img/IMG_0354.jpeg" alt="employee">
+          <div class="careers__employee-container">
+            <img class="careers__employee" src="https://sbbankers.bankofamerica.com/shaun-m-rhinefield/photo" alt="employee">
             <div class="careers__employee-details">
-              <p  class="careers__employee-details--name">Allan Vila</p>
+              <p  class="careers__employee-details--name">Shaun Rhinefield</p>
               <p  class="careers__employee-details--title">Web Developer</p>
-              <p  class="careers__employee-details--location">Located in Sarasota, FL</p>
-              <p  class="careers__employee-details--review">"NSi gave me a chance and changed my family's life!" <i class="fas fa-heart"></i></p>
+              <p  class="careers__employee-details--location">Located in Lexington Park, MD</p>
+              <p  class="careers__employee-details--review">"I've been able to see the world from Europe, China, and Russia!" <i class="fas fa-plane"></i></p>
               <div class="careers__employee-details--bubbles">
                 <img class="bubbles--green" src="./img/green-bubble.png" alt="">
                 <img class="bubbles--red" src="./img/red-bubble.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="careers__employee-container front">
+            <img class="careers__employee--front" src="./img/IMG_0354.jpeg" alt="employee">
+            <div class="careers__employee-details front">
+              <p  class="careers__employee-details--name front">Allan Vila</p>
+              <p  class="careers__employee-details--title front">Web Developer</p>
+              <p  class="careers__employee-details--location front">Located in Sarasota, FL</p>
+              <p  class="careers__employee-details--review front">"NSi gave me a chance and changed my family's life!" <i class="fas fa-heart"></i></p>
+              <div class="careers__employee-details--bubbles front">
+                <img class="bubbles--green front" src="./img/green-bubble.png" alt="">
+                <img class="bubbles--red front" src="./img/red-bubble.png" alt="">
               </div>
             </div>
           </div>
@@ -117,7 +130,7 @@
       </div>
       <div class="careers__right">
         <h2 class="careers__right--header">Looking for a change and <br>want to join the team?</h2>
-        <p class="careers__right--details">Do you want to help our national security? Join a fast-growing high paced team. We have locations in MD, VA, JF, NC, and CA. We also offer remote work!</p>
+        <p class="careers__right--details">Help strengthen our national security. Join a fast-growing high paced team. We have locations in MD, VA, JF, NC, and CA. We also offer remote work!</p>
         <a class="careers__right--apply-btn"href="#">Apply Now!</a>
       </div>
     </section>
