added button hovers

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <a class="nav__links--link" href="#">Careers</a>
             <a class="nav__links--link" href="#">Locations</a>
             <i class="fas fa-search"></i> 
-            <a class="nav__links--link contact-btn" href="#">Contact Us</a>
+            <a class="contact-btn" href="#">Contact Us</a>
           </div>
       </nav>
 
