header is responsive

--- a/public/index.html
+++ b/public/index.html
@@ -47,16 +47,17 @@
             <a class="nav__links--link" href="#">Locations</a>
             <i class="fas fa-search"></i> 
             <a class="contact-btn" href="#">Contact Us</a>
+            <i class="fas fa-bars"></i>
           </div>
       </nav>
 
     </header>
-    <section class="values">
+    <!-- <section class="values">
       <img class="values__img" src="./img/sdvosb.jpeg" alt="SDVOSB emblem">
       <img src="./img/values.png" alt="values">
       <img class="values__img" src="./img/iso.jpeg" alt="ISO cert">
-    </section>
-    <section class="whyNSI">
+    </section> -->
+    <!-- <section class="whyNSI">
       <div class="whyNSI__left">
         <span style="opacity: .5">WHY NSI</span>
         <h2 class="whyNSI__left--title">we're supporting <br>the war fighter</h2>
@@ -65,16 +66,16 @@
       <div class="whyNSI__right">
         <img class="whyNSI__right--img"src="https://images.pexels.com/photos/1582492/pexels-photo-1582492.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="military smiling">
       </div>
-    </section>
-    <section class="mission">
+    </section> -->
+    <!-- <section class="mission">
       <h2 class="mission__title">Our mission <br>we set out to accomplish</h2>
       <p class="mission__details">To promote U.S. national security through innovative <br>solutions and strategic partnerships.</p>
       <div class="mission__buttons">
         <a class="mission__buttons--btn" href="#">News</a>
         <a class="mission__buttons--btn clear" href="#">Services/Partners</a>
       </div>
-    </section>
-    <section class="our-team">
+    </section> -->
+    <!-- <section class="our-team">
       <h2>Meet the team</h2>
       <div class="our-team__container">
         <div class="our-team__container--left">
@@ -95,8 +96,8 @@
         </div>
 
       </div>
-    </section>
-    <section class="careers">
+    </section> -->
+    <!-- <section class="careers">
       <div class="careers__left">
         <div class="careers__employee-relative-container">
           <div class="careers__employee-container">
@@ -133,8 +134,8 @@
         <p class="careers__right--details">Help strengthen our national security. Join a fast-growing high paced team. We have locations in MD, VA, JF, NC, and CA. We also offer remote work!</p>
         <a class="careers__right--apply-btn"href="#">Apply Now!</a>
       </div>
-    </section>
-    <section class="contact">
+    </section> -->
+    <!-- <section class="contact">
       <span>CONTACT US</span>
       <h2 class="contact__header">Become a Client/Partner</h2>
       <p>Sign up below and we'll contact<br>you shortly</p>
@@ -169,11 +170,8 @@
           <p>By subscribing to emails from NSi, you are agreeing to Nsi's <a>privacy policy.</a></p>
         </div>
       </form>
-    </section>
-   
-
-
-    <footer class="footer">
+    </section> -->
+    <!-- <footer class="footer">
       <div class="footer__top">
         <div class="footer__top--section">
           <a href="#" class="footer__top--section-header">Questions?</a>
@@ -216,7 +214,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis <br> laborum, dolor mollitia odio reiciendis id architecto error mollitia <br>laborum, dolor mollitia odio reiciendis id</p>
         <p>Privacy Policy - Copyright NIS.us, 2021</p>
       </div>
-    </footer>
+    </footer> -->
     <script src="/js/dist/vendors~FirstComp.js"></script>
     <script src="/js/dist/FirstComp.js"></script>
     <script src="/js/dist/main.js"></script>
