--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,11 @@
       </nav>
 
     </header>
-    <!-- <section class="values">
+    <section class="values">
       <img class="values__img" src="./img/sdvosb.jpeg" alt="SDVOSB emblem">
-      <img src="./img/values.png" alt="values">
+      <img class="values__img--middle" src="./img/values.png" alt="values">
       <img class="values__img" src="./img/iso.jpeg" alt="ISO cert">
-    </section> -->
+    </section>
     <!-- <section class="whyNSI">
       <div class="whyNSI__left">
         <span style="opacity: .5">WHY NSI</span>
