--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       <img class="values__img--middle" src="./img/values.png" alt="values">
       <img class="values__img" src="./img/iso.jpeg" alt="ISO cert">
     </section>
-    <!-- <section class="whyNSI">
+    <section class="whyNSI">
       <div class="whyNSI__left">
         <span style="opacity: .5">WHY NSI</span>
         <h2 class="whyNSI__left--title">we're supporting <br>the war fighter</h2>
@@ -66,15 +66,15 @@
       <div class="whyNSI__right">
         <img class="whyNSI__right--img"src="https://images.pexels.com/photos/1582492/pexels-photo-1582492.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="military smiling">
       </div>
-    </section> -->
-    <!-- <section class="mission">
+    </section>
+    <section class="mission">
       <h2 class="mission__title">Our mission <br>we set out to accomplish</h2>
       <p class="mission__details">To promote U.S. national security through innovative <br>solutions and strategic partnerships.</p>
       <div class="mission__buttons">
         <a class="mission__buttons--btn" href="#">News</a>
         <a class="mission__buttons--btn clear" href="#">Services/Partners</a>
       </div>
-    </section> -->
+    </section>
     <!-- <section class="our-team">
       <h2>Meet the team</h2>
       <div class="our-team__container">
