--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
         <a class="mission__buttons--btn clear" href="#">Services/Partners</a>
       </div>
     </section>
-    <!-- <section class="our-team">
+    <section class="our-team">
       <h2>Meet the team</h2>
       <div class="our-team__container">
         <div class="our-team__container--left">
@@ -96,8 +96,8 @@
         </div>
 
       </div>
-    </section> -->
-    <!-- <section class="careers">
+    </section>
+    <section class="careers">
       <div class="careers__left">
         <div class="careers__employee-relative-container">
           <div class="careers__employee-container">
@@ -134,8 +134,8 @@
         <p class="careers__right--details">Help strengthen our national security. Join a fast-growing high paced team. We have locations in MD, VA, JF, NC, and CA. We also offer remote work!</p>
         <a class="careers__right--apply-btn"href="#">Apply Now!</a>
       </div>
-    </section> -->
-    <!-- <section class="contact">
+    </section>
+    <section class="contact">
       <span>CONTACT US</span>
       <h2 class="contact__header">Become a Client/Partner</h2>
       <p>Sign up below and we'll contact<br>you shortly</p>
@@ -170,8 +170,8 @@
           <p>By subscribing to emails from NSi, you are agreeing to Nsi's <a>privacy policy.</a></p>
         </div>
       </form>
-    </section> -->
-    <!-- <footer class="footer">
+    </section>
+    <footer class="footer">
       <div class="footer__top">
         <div class="footer__top--section">
           <a href="#" class="footer__top--section-header">Questions?</a>
@@ -214,7 +214,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis <br> laborum, dolor mollitia odio reiciendis id architecto error mollitia <br>laborum, dolor mollitia odio reiciendis id</p>
         <p>Privacy Policy - Copyright NIS.us, 2021</p>
       </div>
-    </footer> -->
+    </footer>
     <script src="/js/dist/vendors~FirstComp.js"></script>
     <script src="/js/dist/FirstComp.js"></script>
     <script src="/js/dist/main.js"></script>
