--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
             <img class="careers__employee" src="https://sbbankers.bankofamerica.com/shaun-m-rhinefield/photo" alt="employee">
             <div class="careers__employee-details">
               <p  class="careers__employee-details--name">Shaun Rhinefield</p>
-              <p  class="careers__employee-details--title">Web Developer</p>
+              <p  class="careers__employee-details--title">Tableau Developer</p>
               <p  class="careers__employee-details--location">Located in Lexington Park, MD</p>
               <p  class="careers__employee-details--review">"I've been able to see the world from Europe, China, and Russia!" <i class="fas fa-plane"></i></p>
               <div class="careers__employee-details--bubbles">
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="careers__right">
-        <h2 class="careers__right--header">Looking for a change and <br>want to join the team?</h2>
+        <h2 class="careers__right--header">Looking for a change and want to join the team?</h2>
         <p class="careers__right--details">Help strengthen our national security. Join a fast-growing high paced team. We have locations in MD, VA, JF, NC, and CA. We also offer remote work!</p>
         <a class="careers__right--apply-btn"href="#">Apply Now!</a>
       </div>
