--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
               <p  class="careers__employee-details--name">Shaun Rhinefield</p>
               <p  class="careers__employee-details--title">Tableau Developer</p>
               <p  class="careers__employee-details--location">Located in Lexington Park, MD</p>
-              <p  class="careers__employee-details--review">"I've been able to see the world from Europe, China, and Russia!" <i class="fas fa-plane"></i></p>
+              <p  class="careers__employee-details--review">"I've been able to see the world! <i class="fas fa-plane"></i></p>
               <div class="careers__employee-details--bubbles">
                 <img class="bubbles--green" src="./img/green-bubble.png" alt="">
                 <img class="bubbles--red" src="./img/red-bubble.png" alt="">
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="careers__employee-container front">
-            <img class="careers__employee--front" src="./img/IMG_0354.jpeg" alt="employee">
+            <img class="careers__employee front" src="./img/IMG_0354.jpeg" alt="employee">
             <div class="careers__employee-details front">
               <p  class="careers__employee-details--name front">Allan Vila</p>
               <p  class="careers__employee-details--title front">Web Developer</p>
