fixed empoyee container review quotation mark

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
               <p  class="careers__employee-details--name">Shaun Rhinefield</p>
               <p  class="careers__employee-details--title">Tableau Developer</p>
               <p  class="careers__employee-details--location">Located in Lexington Park, MD</p>
-              <p  class="careers__employee-details--review">"I've been able to see the world! <i class="fas fa-plane"></i></p>
+              <p  class="careers__employee-details--review">"I've been able to see the world!" <i class="fas fa-plane"></i></p>
               <div class="careers__employee-details--bubbles">
                 <img class="bubbles--green" src="./img/green-bubble.png" alt="">
                 <img class="bubbles--red" src="./img/red-bubble.png" alt="">
