--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             <i class="fas fa-bars"></i>
           </div>
       </nav>
-
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     </header>
     <section class="values">
       <img class="values__img" src="./img/sdvosb.jpeg" alt="SDVOSB emblem">
@@ -215,6 +215,11 @@
         <p>Privacy Policy - Copyright NIS.us, 2021</p>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/CSSRulePlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/TextPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollToPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
     <script src="/js/dist/vendors~FirstComp.js"></script>
     <script src="/js/dist/FirstComp.js"></script>
     <script src="/js/dist/main.js"></script>
