--- a/public/index.html
+++ b/public/index.html
@@ -39,18 +39,17 @@
           <h1>logo</h1>
           <div class="nav__links">
             <a class="nav__links--link nav__links--link-underline" href="#">About Us</a>
-            <a class="nav__links--link" href="#">News</a>
+            <a id="nav__links--link" class="nav__links--link" href="#">News</a>
             <a class="nav__links--link" href="#">Services</a>
             <a class="nav__links--link" href="#">Clients/Partners</a>
             <a class="nav__links--link" href="#">Contract Vehicles</a>
             <a class="nav__links--link" href="#">Careers</a>
             <a class="nav__links--link" href="#">Locations</a>
-            <i class="fas fa-search"></i> 
-            <a class="contact-btn" href="#">Contact Us</a>
+            <i class="fas fa-search nav__links--link"></i> 
+            <a class="contact-btn nav__links--link" href="#">Contact Us</a>
             <i class="fas fa-bars"></i>
           </div>
       </nav>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     </header>
     <section class="values">
       <img class="values__img" src="./img/sdvosb.jpeg" alt="SDVOSB emblem">
@@ -83,13 +82,13 @@
           src="https://images.pexels.com/photos/3201694/pexels-photo-3201694.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           <img class="our-team__container--pic" src="https://images.pexels.com/photos/3460134/pexels-photo-3460134.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           <img class="our-team__container--pic" src="https://images.pexels.com/photos/1181424/pexels-photo-1181424.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
-          <img class="our-team__container--pic-big" src="https://images.pexels.com/photos/834863/pexels-photo-834863.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
-          <img class="our-team__container--pic-tall" src="https://images.pexels.com/photos/1024311/pexels-photo-1024311.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+          <img class="our-team__container--pic big" src="https://images.pexels.com/photos/834863/pexels-photo-834863.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+          <img class="our-team__container--pic tall" src="https://images.pexels.com/photos/1024311/pexels-photo-1024311.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
         </div>
 
         <div class="our-team__container--right">
-          <img class="our-team__container--pic-big" src="https://images.pexels.com/photos/3681609/pexels-photo-3681609.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
-          <img class="our-team__container--pic-tall" src="https://images.pexels.com/photos/3778876/pexels-photo-3778876.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+          <img class="our-team__container--pic big" src="https://images.pexels.com/photos/3681609/pexels-photo-3681609.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+          <img class="our-team__container--pic tall" src="https://images.pexels.com/photos/3778876/pexels-photo-3778876.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           <img class="our-team__container--pic" src="https://images.pexels.com/photos/4347368/pexels-photo-4347368.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           <img class="our-team__container--pic" src="https://images.pexels.com/photos/32976/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           <img class="our-team__container--pic" src="https://images.pexels.com/photos/2182970/pexels-photo-2182970.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
@@ -215,11 +214,11 @@
         <p>Privacy Policy - Copyright NIS.us, 2021</p>
       </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/CSSRulePlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/TextPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollToPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/CSSRulePlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollToPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+    
     <script src="/js/dist/vendors~FirstComp.js"></script>
     <script src="/js/dist/FirstComp.js"></script>
     <script src="/js/dist/main.js"></script>
